// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrChip default matches snapshot 1`] = `
<button
  class="cdr-chip cdr-chip--default"
>
  tortilla chip
</button>
`;

exports[`CdrChip emphasis matches snapshot 1`] = `
<button
  class="cdr-chip cdr-chip--emphasis"
>
  tortilla chip
</button>
`;
